8219414: SA: jhsdb jsnap throws UnmappedAddressException with core generated by gcore

Reviewed-by: cjplummer, jgeorge